test_suite/tests/ui/struct-representation/internally-tagged-unit.stderr
error: #[serde(tag = "...")] can only be used on enums and structs with named fields
 --> tests/ui/struct-representation/internally-tagged-unit.rs:4:9
  |
4 | #[serde(tag = "type")]
  |         ^^^^^^^^^^^^
